# ai_toolkit_multidevice

./: .gitignore  README.md  app.py  gui.py  index.html  pyproject.toml  structure.txt
tasks/: __init__.py  image_caption.py  qa.py  summarizer.py  transcription.py
